# fast-api-blueprint

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-format.yml  ci.yml
alembic/: env.py
alembic/versions/: d4867f3a4c0a_first_revision.py
app/core/: config.py
app/db/: init_db.py  session.py
app/tests/: conftest.py
scripts/format/: format-imports.sh  format.sh
scripts/init/: start.sh
scripts/test/: start-cov-html.sh  start.sh
