[tool.poetry]
name = "fastapi-blueprint"
version = "0.1.0"
description = "FastAPI template project"
authors = ["DanielW1987"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.76.0"
python-dotenv = "0.20.0"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.27.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = "^1.9.0"
emails = "^0.6"
gunicorn = "^20.1.0"
jinja2 = "^3.1.1"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.7"
sqlalchemy = "^1.4.35"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
markupsafe = "2.0.1" # v2.1.1 does not run due to missing soft_unicode

[tool.poetry.dev-dependencies]
mypy = "^0.941"
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^7.1.1"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
